Bug 986970 - Fix for padding alignment issue for bookmarks label in customize->additional tools and features on OS X, r=gijs
UltraBlame original commit: cd908a8fb224713a2d07f06496ce7a234d70ccca

--- a/browser/themes/osx/customizableui/panelUIOverlay.css
+++ b/browser/themes/osx/customizableui/panelUIOverlay.css
@@ -1380,3 +1380,30 @@ height
 32px
 ;
 }
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+>
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+padding
+:
+3px
+1px
+;
+}
